--- a/cfg_files/fit_smplx.yaml
+++ b/cfg_files/fit_smplx.yaml
@@ -6,9 +6,9 @@ joints_to_ign:
 data_folder: "data"
 output_folder: 'smplx_debug'
 prior_folder: 'priors'
-model_folder: 'models'
+model_folder: 'data/models'
 result_folder: 'results'
-gender: "neutral"
+gender: "male"
 model_type: 'smplx'
 # Flag for using the GPU
 use_cuda: True
@@ -28,7 +28,7 @@ focal_length: 5000
 num_pca_comps: 12
 # The constant for the robust loss function
 rho: 100
-interpenetration: True
+interpenetration: False
 df_cone_height: 0.0001
 # Upper arms and Spine 2
 # Neck and jaw
@@ -43,7 +43,7 @@ lr: 1.0
 # Max number of optimization iterations
 maxiters: 30
 interactive: True
-visualize: False
+visualize: True
 # Relative change in loss value
 body_pose_prior_weights:
     - 4.04e2
@@ -100,4 +100,4 @@ face_joints_weights:
     - 2.0
 
 use_vposer: True
-vposer_ckpt: "vposer"
+vposer_ckpt: "data/vposer"
